<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

   <com.guuidea.towersdk.weight.AccountEtView
       android:id="@+id/accountView"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/codeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accountEtLine"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/codeEt"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@null"
            android:inputType="number"
            android:maxLength="8"
            android:singleLine="true"
            android:textColorHint="#999999"
            android:textSize="12sp"
            android:drawableLeft="@mipmap/ic_et_code"
            android:drawablePadding="11dp"
            android:hint="@string/enter_code" />

        <TextView
            android:id="@+id/getCodeBtn"
            android:background="@drawable/code_unsend_bg"
            android:textColor="@color/login_main_color"
            android:layout_width="58dp"
            android:layout_height="24dp"
            android:layout_below="@+id/accountEtLine"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/Send"
            android:textSize="12sp" />

    </LinearLayout>

    <View
        android:id="@+id/codeEtLine"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/codeLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="82dp"
        android:background="@color/gray_cd" />

    <TextView
        android:id="@+id/tipsWithCodeLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#999999"
        android:textSize="10sp"
        android:layout_below="@+id/codeEtLine"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="7dp"
        android:text="@string/tipLoginPhone"

        />
</LinearLayout>